# textcount

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
textcount/: __main__.py  analyzing.py  constants.py  counting.py  data_structures.py  formatting.py  input_output.py  parsing.py  printing.py  processing.py
